--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,17 @@
 /Test
 /TS_v2_dataload
 
+**/*.rds
+**/*.Rdata
+**/*.h5ad
+**/*.h5seurat
 
 data/TS_All_Tissues.zip
-data/TS_All_Tissues/h5seurat/cell_type_counts.Rdata
-data/TS_All_Tissues/h5seurat/*.h5seurat
 data/Tabula_Sapiens_metadata.csv
 
-
-Analysis/data/h5ad/*.h5ad
-Analysis/data/h5seurat/*.h5seurat
 Analysis/data/priors/*.tsv
 
-Analysis/Rdata/*.rds
-Analysis/Rdata/*.Rdata
-
-
-Analysis_v2/data/rds/*.rds
 Analysis_v2/data/priors/motif_prior_names_2024.tsv
 
-Analysis_v2/output/networks/temp/*.Rdata
-Analysis_v2/output/networks/final/*.Rdata
-Analysis_v2/output/preprocessing/*.rds
-
-Analysis_v2/output/sva_preprocessing/blood_preprocessed.rds
-Analysis_v2/output/sva_preprocessing/lung_preprocessed.rds
 Analysis_v2/scripts/sva_preprocessing.R
 Analysis_v2/output/log/sva_preprocess.log
-Analysis_v2/data/rds/TS_All_Tissues/*
